--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --target lib --name Konponents src/main.js",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "scss:watch": "sass --watch src/styles/main.scss dist/konponents.css"
