Major docs rework - API is now mainly self documented - Upgraded API table - Migrated all examples to new format - Added new examples and updated old ones - Updated docs theme (WIP)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-    "name": "konponents-monorepo",
-    "version": "1.0.0",
     "private": true,
-    "workspaces": ["packages/*"]
+    "workspaces": [
+        "packages/*"
+    ],
+    "scripts": {
+        "docs:dev": "yarn workspace docs run docs:dev"
+    },
+    "dependencies": {}
 }
