--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,6 @@
 {
-    "compilerOptions": {
-        "baseUrl": "."
-    },
     "include": [
         "packages/konponents/src/**/*"
-    ]
+    ],
+    "exclude": ["node_modules"]
 }
