remove annoying errors

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,5 +2,5 @@
     "include": [
         "packages/konponents/src/**/*"
     ],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "packages/**/node_modules"]
 }
