--- a/packages/konponents/package.json
+++ b/packages/konponents/package.json
@@ -1,9 +1,23 @@
 {
     "name": "konponents",
-    "version": "1.0.2",
-    "main": "src/main.js",
+    "description": "Vue component library",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/OneLoneFox/vue-konponents",
+        "directory": "packages/konponents"
+    },
+    "version": "1.0.3",
+    "main": "dist/konponents.common.js",
+    "unpkg": "dist/konponents.umd.min.js",
+    "jsdelivr": "dist/konponents.umd.min.js",
+    "browser": "dist/konponents.umd.min.js",
+    "files": [
+        "src/",
+        "dist/",
+        "vetur/"
+    ],
     "scripts": {
-        "build": "vue-cli-service build --target lib --name Konponents src/main.js",
+        "build": "vue-cli-service build --target lib --name konponents src/main.js",
         "scss:watch": "sass --watch src/styles/main.scss dist/konponents.css",
         "vetur": "node scripts/docgen.js"
     },
@@ -26,5 +40,14 @@
         "tags": "./vetur/tags.json",
         "attributes": "./vetur/attributes.json"
     },
-    "license": "MIT"
+    "license": "MIT",
+    "keywords": [
+        "konponents",
+        "component library",
+        "ui library",
+        "vue",
+        "vuejs",
+        "vue2",
+        "vue 2"
+    ]
 }
