--- a/packages/konponents/package.json
+++ b/packages/konponents/package.json
@@ -19,12 +19,15 @@
     "scripts": {
         "build": "vue-cli-service build --target lib --name konponents src/main.js",
         "scss:watch": "sass --watch src/styles/main.scss dist/konponents.css",
-        "vetur": "node scripts/docgen.js"
+        "vetur": "node scripts/docgen.js",
+        "lint": "eslint \"src/**/*.{js,vue}\"",
+        "lint:fix": "eslint \"src/**/*.{js,vue}\" --fix"
     },
-    "dependencies": {},
     "devDependencies": {
         "@vue/cli-plugin-babel": "~4.5.0",
         "@vue/cli-service": "~4.5.0",
+        "eslint": "^8.13.0",
+        "eslint-plugin-vue": "^8.6.0",
         "glob": "^7.2.0",
         "sass": "^1.26.5",
         "sass-loader": "^8.0.2",
