--- a/packages/konponents/.eslintrc.json
+++ b/packages/konponents/.eslintrc.json
@@ -40,6 +40,10 @@
         ],
         "no-unused-vars": [
             "warn"
+        ],
+        "no-mixed-spaces-and-tabs": [
+            "error",
+            "smart-tabs"
         ]
     }
 }
