Added nesting example to docs

--- a/packages/konponents/.eslintrc.json
+++ b/packages/konponents/.eslintrc.json
@@ -44,6 +44,9 @@
         "no-mixed-spaces-and-tabs": [
             "error",
             "smart-tabs"
+        ],
+        "no-console": [
+            "warn"
         ]
     }
 }
